--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MOCASEF</title>
+    <title>MOCASEF | Em Construção</title>
+
     <link rel="stylesheet" href="index.css">
+
+    <!-- Fonte -->
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-
-    <h1>Teste</h1>
+    <section class="sec1">
+        <img src="logo.svg" alt="">
+        <div>
+            <p class="poppins">(48) xxxx-xxxx</p>
+            <p class="poppins">mocasef@gmail.com</p>
+        </div>
+    </section>
 </body>
 </html>
