--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <section class="sec1">
-        <img src="logo.svg" alt="">
+        <img src="logo.png" alt="">
         <div>
             <p class="poppins">(48) xxxx-xxxx</p>
             <p class="poppins">mocasef@gmail.com</p>
