--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 </head>
 <body>
     <section class="sec1">
-        <img src="logo.png" alt="">
-        <div>
-            <p class="poppins">(48) xxxx-xxxx</p>
-            <p class="poppins">mocasef@gmail.com</p>
+        <div class="conteudo">
+            <img src="logo.png" alt="">
+            <div>
+                <p class="poppins">(48) xxxx-xxxx</p>
+                <p class="poppins">mocasef@gmail.com</p>
+            </div>
         </div>
     </section>
 </body>
