--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             <img src="logo.png" alt="">
             <div>
                 <p class="poppins">+55 14 9 9646 8436</p>
-                <p class="poppins">mocasef@gmail.com</p>
+                <p class="poppins">mocasf@gmail.com</p>
+                 <p class="poppins">Bem-vindo(a)!</p>
             </div>
         </div>
     </section>
