--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
         <div class="conteudo">
             <img src="logo.png" alt="">
             <div>
+                <p class="poppins">Bem-vindo(a)!
+                </p>
                 <p class="poppins">+55 14 9 9646 8436</p>
                 <p class="poppins">mocasf@gmail.com</p>
-                 <p class="poppins">Bem-vindo(a)!</p>
+                 
             </div>
         </div>
     </section>
